--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <!-- Produktová sekce s obalem, popisem a CTA -->
     <section class="product">
-      <img src="images/cover.jpg" alt="Obálka e-booku Jak vydělat na internetu v roce 2025">
+      <img src="images/cover.png" alt="Obálka e-booku Jak vydělat na internetu v roce 2025">
       <div class="details">
         <ul class="features">
           <li>Okamžitě použitelné strategie pro online podnikání.</li>
