Improve landing page design

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
+  <header class="hero">
     <h1>Jak vydělat na internetu v roce 2025</h1>
     <p>E‑book plný praktických tipů a návodů pro váš online úspěch.</p>
   </header>
