Remove unused retina image and update srcset

--- a/index.html
+++ b/index.html
@@ -2,68 +2,11 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jak vydělat na internetu v roce 2025</title>
-  <meta name="description" content="Objevte ověřené strategie, jak si v roce 2025 vydělat online. Stáhněte si e-book ještě dnes!">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.kiprotect.com/klaro/v0.7/klaro.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <meta http-equiv="refresh" content="0; url=/ebook/">
+  <link rel="canonical" href="/ebook/">
+  <title>Přesměrování...</title>
 </head>
 <body>
-  <header class="hero">
-    <h1>Jak vydělat na internetu v roce 2025</h1>
-    <p>E‑book plný praktických tipů a návodů pro váš online úspěch.</p>
-  </header>
-  <main>
-    <!-- Produktová sekce s obalem, popisem a CTA -->
-    <section class="product">
-      <img src="images/cover.png" alt="Obálka e-booku Jak vydělat na internetu v roce 2025">
-      <div class="details">
-        <ul class="features">
-          <li>Okamžitě použitelné strategie pro online podnikání.</li>
-          <li>Jednoduché návody krok za krokem.</li>
-          <li>Funguje i bez předchozích zkušeností.</li>
-        </ul>
-        <!-- ZDE VLOŽIT SIMPLESHOP (data-shop="…" data-item="…") -->
-        <a href="#order" class="cta-btn">Koupit nyní</a>
-      </div>
-    </section>
-
-    <!-- Nejčastější otázky -->
-    <section class="faq">
-      <h2>Časté dotazy</h2>
-      <div class="faq-item">
-        <h3>Je e-book vhodný pro začátečníky?</h3>
-        <p>Ano, všechny postupy jsou vysvětleny jednoduše a srozumitelně.</p>
-      </div>
-      <div class="faq-item">
-        <h3>Jak e-book obdržím?</h3>
-        <p>Ihned po zaplacení vám přijde odkaz ke stažení na e-mail.</p>
-      </div>
-      <div class="faq-item">
-        <h3>Co když se mi e-book nebude líbit?</h3>
-        <p>Nabízíme garanci vrácení peněz do 14 dní od nákupu.</p>
-      </div>
-      <div class="faq-item">
-        <h3>Mohu e-book sdílet s ostatními?</h3>
-        <p>E-book je určen pouze pro vaše osobní potřeby.</p>
-      </div>
-    </section>
-
-    <!-- O autorovi -->
-    <section class="author">
-      <h2>O autorovi</h2>
-      <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V e-booku sdílím své nejúspěšnější strategie, které vám pomohou uspět v digitálním světě.</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Jan Novák</p>
-  </footer>
-
-  <script src="https://cdn.kiprotect.com/klaro/v0.7/klaro.min.js"></script>
-  <script src="js/cookie.js"></script>
+  <p>Pokud nejste automaticky přesměrováni, <a href="/ebook/">klikněte zde</a>.</p>
 </body>
 </html>
