Fix redirect link

--- a/ebook/index.html
+++ b/ebook/index.html
@@ -12,22 +12,22 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta property="og:title" content="Jak vydělat na internetu v roce 2025 | E-book">
   <meta property="og:description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.">
-  <meta property="og:image" content="https://michal789-cmd.github.io/ebook/images/cover.png">
-  <meta property="og:url" content="https://michal789-cmd.github.io/ebook/">
+  <meta property="og:image" content="https://michal789-cmd.github.io/E-book/ebook/images/cover.png">
+  <meta property="og:url" content="https://michal789-cmd.github.io/E-book/ebook/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Jak vydělat na internetu v roce 2025 | E-book">
   <meta name="twitter:description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.">
-  <meta name="twitter:image" content="https://michal789-cmd.github.io/ebook/images/cover.png">
+  <meta name="twitter:image" content="https://michal789-cmd.github.io/E-book/ebook/images/cover.png">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Product",
     "name": "Jak vydělat na internetu v roce 2025",
     "description": "Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.",
-    "image": "https://michal789-cmd.github.io/ebook/images/cover.png",
+    "image": "https://michal789-cmd.github.io/E-book/ebook/images/cover.png",
     "offers": {
       "@type": "Offer",
-      "url": "https://michal789-cmd.github.io/ebook/",
+      "url": "https://michal789-cmd.github.io/E-book/ebook/",
       "price": "490",
       "priceCurrency": "CZK",
       "availability": "https://schema.org/InStock"
