--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=/ebook/">
-  <link rel="canonical" href="/ebook/">
+  <meta http-equiv="refresh" content="0; url=ebook/">
+  <link rel="canonical" href="ebook/">
   <title>Přesměrování...</title>
 </head>
 <body>
-  <p>Pokud nejste automaticky přesměrováni, <a href="/ebook/">klikněte zde</a>.</p>
+  <p>Pokud nejste automaticky přesměrováni, <a href="ebook/">klikněte zde</a>.</p>
 </body>
 </html>
