Move landing page back to repo root

--- a/index.html
+++ b/index.html
@@ -3,66 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jak vydělat na internetu v roce 2025</title>
-  <meta name="description" content="Objevte ověřené strategie, jak si v roce 2025 vydělat online. Stáhněte si e-book ještě dnes!">
+  <title>Jak vydělat na internetu v roce 2025 | E-book</title>
+  <meta name="description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.kiprotect.com/klaro/v0.7/klaro.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="css/styles.css">
+  <meta property="og:title" content="Jak vydělat na internetu v roce 2025 | E-book">
+  <meta property="og:description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.">
+  <meta property="og:image" content="https://michal789-cmd.github.io/E-book/images/cover.png">
+  <meta property="og:url" content="https://michal789-cmd.github.io/E-book/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jak vydělat na internetu v roce 2025 | E-book">
+  <meta name="twitter:description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.">
+  <meta name="twitter:image" content="https://michal789-cmd.github.io/E-book/images/cover.png">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Jak vydělat na internetu v roce 2025",
+    "description": "Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.",
+    "image": "https://michal789-cmd.github.io/E-book/images/cover.png",
+    "offers": {
+      "@type": "Offer",
+      "url": "https://michal789-cmd.github.io/E-book/",
+      "price": "490",
+      "priceCurrency": "CZK",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
 </head>
-<body>
-  <header class="hero">
-    <h1>Jak vydělat na internetu v roce 2025</h1>
-    <p>E‑book plný praktických tipů a návodů pro váš online úspěch.</p>
+<body class="bg-gray-50 text-gray-800 font-inter">
+  <header class="hero text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4" id="top">
+    <h1 class="text-3xl font-extrabold mb-2">Jak vydělat na internetu v roce 2025</h1>
+    <p class="mb-4">3 mikroprojekty, které mi v 2024 vydělaly 27 000 Kč měsíčně.</p>
+    <a href="https://example.com/platba" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
+    <p class="mt-2"><a href="#faq" class="underline text-white focus:outline-none focus:ring-4 focus:ring-yellow-300">↘ Přejít na FAQ</a></p>
   </header>
-  <main>
-    <!-- Produktová sekce s obalem, popisem a CTA -->
-    <section class="product">
-      <img src="images/cover.png" alt="Obálka e-booku Jak vydělat na internetu v roce 2025">
-      <div class="details">
-        <ul class="features">
-          <li>Okamžitě použitelné strategie pro online podnikání.</li>
-          <li>Jednoduché návody krok za krokem.</li>
-          <li>Funguje i bez předchozích zkušeností.</li>
-        </ul>
-        <!-- ZDE VLOŽIT SIMPLESHOP (data-shop="…" data-item="…") -->
-        <a href="#order" class="cta-btn">Koupit nyní</a>
+  <main class="max-w-4xl mx-auto px-4 py-8">
+    <section id="why" class="mb-8">
+      <h2 class="text-2xl font-bold mb-4">Proč právě tento e‑book</h2>
+      <ul class="list-none space-y-2">
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Ověřené postupy, které mi přinesly přes 300 000 Kč za poslední rok.</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Reálné ukázky tří projektů s náklady pod 1 000 Kč.</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Návody krok za krokem včetně checklistů.</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Minimalistické nástroje zdarma nebo do 500 Kč.</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Podpora e-mailem do 24 hodin.</li>
+      </ul>
+    </section>
+    <section id="learn" class="mb-8">
+      <h2 class="text-2xl font-bold mb-4">Co se naučíte</h2>
+      <p>Jak vybrat správnou online strategii, jak nastavit proces získávání zákazníků a jak měřit výsledky, abyste do 90 dnů dosáhli příjmu 30 000 Kč.</p>
+    </section>
+    <section class="product flex flex-col md:flex-row items-center bg-white p-6 rounded-2xl shadow-lg mb-8">
+      <img src="images/cover.png" srcset="images/cover.png 1x, images/cover.png 2x" alt="Obálka e-booku Jak vydělat na internetu v roce 2025" class="w-48 md:w-72 rounded-2xl shadow">
+      <div class="details md:ml-6 mt-4 md:mt-0">
+        <a href="https://example.com/platba" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
       </div>
     </section>
-
-    <!-- Nejčastější otázky -->
-    <section class="faq">
-      <h2>Časté dotazy</h2>
-      <div class="faq-item">
-        <h3>Je e-book vhodný pro začátečníky?</h3>
-        <p>Ano, všechny postupy jsou vysvětleny jednoduše a srozumitelně.</p>
-      </div>
-      <div class="faq-item">
-        <h3>Jak e-book obdržím?</h3>
-        <p>Ihned po zaplacení vám přijde odkaz ke stažení na e-mail.</p>
-      </div>
-      <div class="faq-item">
-        <h3>Co když se mi e-book nebude líbit?</h3>
-        <p>Nabízíme garanci vrácení peněz do 14 dní od nákupu.</p>
-      </div>
-      <div class="faq-item">
-        <h3>Mohu e-book sdílet s ostatními?</h3>
-        <p>E-book je určen pouze pro vaše osobní potřeby.</p>
-      </div>
+    <section id="author" class="author bg-white p-6 rounded-2xl shadow-lg mb-8">
+      <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
+      <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
     </section>
-
-    <!-- O autorovi -->
-    <section class="author">
-      <h2>O autorovi</h2>
-      <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V e-booku sdílím své nejúspěšnější strategie, které vám pomohou uspět v digitálním světě.</p>
+    <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
+      <h2 class="text-2xl font-bold mb-4">FAQ</h2>
+      <div class="faq-item mb-4"><h3 class="font-semibold">Je e-book vhodný pro začátečníky?</h3><p>Ano, všechny postupy jsou vysvětleny jednoduše a srozumitelně.</p></div>
+      <div class="faq-item mb-4"><h3 class="font-semibold">Jak e-book obdržím?</h3><p>Ihned po zaplacení obdržíte odkaz ke stažení na e-mail.</p></div>
+      <div class="faq-item mb-4"><h3 class="font-semibold">Jak mohu požádat o vrácení peněz?</h3><p>Napište do 14 dnů od nákupu na <a href="mailto:podpora@example.com" class="text-blue-700 underline">podpora@example.com</a>. Peníze vracíme stejnou metodou platby.</p></div>
+      <div class="faq-item"><h3 class="font-semibold">Mohu e-book sdílet s ostatními?</h3><p>E-book je určen pouze pro vaše osobní potřeby.</p></div>
     </section>
   </main>
-
-  <footer>
+  <footer class="text-center text-sm text-gray-500 py-4">
     <p>&copy; 2025 Jan Novák</p>
   </footer>
-
   <script src="https://cdn.kiprotect.com/klaro/v0.7/klaro.min.js"></script>
   <script src="js/cookie.js"></script>
 </body>
