--- a/index.html
+++ b/index.html
@@ -36,12 +36,22 @@
   </script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-inter">
-  <header class="hero text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4" id="top">
-    <h1 class="text-3xl font-extrabold mb-2">Jak vydělat na internetu v roce 2025</h1>
-    <p class="mb-4">3 mikroprojekty, které mi v 2024 vydělaly 27 000 Kč měsíčně.</p>
-    <a href="https://example.com/platba" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
-    <p class="mt-2"><a href="#faq" class="underline text-white focus:outline-none focus:ring-4 focus:ring-yellow-300">↘ Přejít na FAQ</a></p>
-  </header>
+  <header id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
+  <h1 class="text-3xl font-extrabold mb-2">Jak vydělat na internetu v roce 2025</h1>
+  <p class="mb-4">3 mikroprojekty, které mi v 2024 vydělaly 27 000 Kč měsíčně.</p>
+  <a href="https://example.com/platba"
+     aria-label="Koupit e-book"
+     onclick="gtag('event','click',{'event_category':'cta'});"
+     class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">
+    Koupit e-book
+  </a>
+  <p class="mt-2">
+    <a href="#faq" class="underline text-white focus:outline-none focus:ring-4 focus:ring-yellow-300">
+      ↘ Přejít na FAQ
+    </a>
+  </p>
+</header>
+
   <main class="max-w-4xl mx-auto px-4 py-8">
     <section id="why" class="mb-8">
       <h2 class="text-2xl font-bold mb-4">Proč právě tento e‑book</h2>
