--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-inter">
-  <header id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
+  <header mx-auto id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
   <h1 class="text-3xl font-extrabold mb-2">Jak vydělat na internetu v roce 2025</h1>
   <p class="mb-4">3 mikroprojekty, které mi v 2024 vydělaly 27 000 Kč měsíčně.</p>
   <a href="https://example.com/platba"
