--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-inter">
-  <main class="max-w-4xl mx-auto px-4 py-8">
+  <div class="max-w-5xl mx-auto px-4">
   <header id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
   <h1 class="text-3xl font-extrabold mb-2">Jak vydělat na internetu v roce 2025</h1>
   <p class="mb-4">3 mikroprojekty, které mi v 2024 vydělaly 27 000 Kč měsíčně.</p>
@@ -52,7 +52,8 @@
     </a>
   </p>
 </header>
-
+    </div>
+<main class="max-w-4xl mx-auto px-4 py-8">
     <section id="why" class="mb-8">
       <h2 class="text-2xl font-bold mb-4">Proč právě tento e‑book</h2>
       <ul class="list-none space-y-2">
