--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
       <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
       <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
     </section>
+  <!-- www.SimpleShop.cz form#120968 start -->
+<div data-SimpleShopForm="4zR67"><div>Prodejní formulář je vytvořen v systému <a href="https://www.simpleshop.cz/?utm_source=simpleshop&utm_medium=form&utm_campaign=27116" target="_blank">SimpleShop.cz</a>.</div></div>
+<script>
+ (function(i, s, o, g, r, a, m){
+  i[r] = i[r] || function(){
+   (i[r].q = i[r].q || []).push(arguments)
+  }, i[r].l = 1 * new Date();
+  a = s.createElement(o),
+  m = s.getElementsByTagName(o)[0];
+  a.async = 1;
+  a.src = g;
+  m.parentNode.insertBefore(a, m)
+ })(window, document, "script", "https://form.simpleshop.cz/prj/js/SimpleShopService.js", "sss");
+ sss("createForm", "4zR67");
+</script>
+<!-- www.SimpleShop.cz form#120968 end -->
     <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
       <h2 class="text-2xl font-bold mb-4">FAQ</h2>
       <div class="faq-item mb-4"><h3 class="font-semibold">Je e-book vhodný pro začátečníky?</h3><p>Ano, všechny postupy jsou vysvětleny jednoduše a srozumitelně.</p></div>
