--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
       <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
     </section>
+  <div class="bg-[#f9fafc] rounded-2xl p-6 shadow-md max-w-3xl mx-auto my-8">
   <!-- www.SimpleShop.cz form#120968 start -->
 <div data-SimpleShopForm="4zR67"><div>Prodejní formulář je vytvořen v systému <a href="https://www.simpleshop.cz/?utm_source=simpleshop&utm_medium=form&utm_campaign=27116" target="_blank">SimpleShop.cz</a>.</div></div>
 <script>
@@ -94,6 +95,7 @@
  sss("createForm", "4zR67");
 </script>
 <!-- www.SimpleShop.cz form#120968 end -->
+    </div>
     <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
       <h2 class="text-2xl font-bold mb-4">FAQ</h2>
       <div class="faq-item mb-4"><h3 class="font-semibold">Je e-book vhodný pro začátečníky?</h3><p>Ano, všechny postupy jsou vysvětleny jednoduše a srozumitelně.</p></div>
