--- a/index.html
+++ b/index.html
@@ -78,23 +78,31 @@
       <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
       <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
     </section>
-  <div class="bg-[#f9fafc] rounded-2xl p-6 shadow-md max-w-3xl mx-auto my-8">
+  <section id="simpleshop" class="simpleshop bg-white p-6 rounded-2xl shadow-lg mb-8">
   <!-- www.SimpleShop.cz form#120968 start -->
-<div data-SimpleShopForm="4zR67"><div>Prodejní formulář je vytvořen v systému <a href="https://www.simpleshop.cz/?utm_source=simpleshop&utm_medium=form&utm_campaign=27116" target="_blank">SimpleShop.cz</a>.</div></div>
+<div class="bg-[#f9fafc] rounded-2xl p-6 shadow-md max-w-3xl mx-auto my-8" data-SimpleShopForm="4zR67">
+  <div class="text-sm text-gray-500 mt-4 text-center">
+    Prodejní formulář je vytvořen v systému
+    <a href="https://www.simpleshop.cz/?utm_source=simpleshop&utm_medium=form&utm_campaign=27116" target="_blank" class="underline hover:text-gray-700">
+      SimpleShop.cz
+    </a>.
+  </div>
+</div>
 <script>
- (function(i, s, o, g, r, a, m){
-  i[r] = i[r] || function(){
-   (i[r].q = i[r].q || []).push(arguments)
-  }, i[r].l = 1 * new Date();
-  a = s.createElement(o),
-  m = s.getElementsByTagName(o)[0];
-  a.async = 1;
-  a.src = g;
-  m.parentNode.insertBefore(a, m)
- })(window, document, "script", "https://form.simpleshop.cz/prj/js/SimpleShopService.js", "sss");
- sss("createForm", "4zR67");
+  (function(i, s, o, g, r, a, m) {
+    i[r] = i[r] || function() {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, "script", "https://form.simpleshop.cz/prj/js/SimpleShopService.js", "sss");
+  sss("createForm", "4zR67");
 </script>
 <!-- www.SimpleShop.cz form#120968 end -->
+    </section>
     </div>
     <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
       <h2 class="text-2xl font-bold mb-4">FAQ</h2>
