--- a/index.html
+++ b/index.html
@@ -80,10 +80,26 @@
     </section>
   <section id="simpleshop" class="simpleshop bg-white p-6 rounded-2xl shadow-lg mb-8">
   <!-- www.SimpleShop.cz form#120968 start -->
-<div class="bg-[#f9fafc] rounded-2xl p-6 shadow-md max-w-3xl mx-auto my-8" data-SimpleShopForm="4zR67">
+<div
+  id="simpleshop"
+  data-SimpleShopForm="4zR67"
+  class="simpleshop
+         bg-[#f9fafc]
+         p-6
+         rounded-2xl
+         shadow-lg
+         mb-8
+         max-w-3xl
+         mx-auto
+         my-8"
+>
   <div class="text-sm text-gray-500 mt-4 text-center">
     Prodejní formulář je vytvořen v systému
-    <a href="https://www.simpleshop.cz/?utm_source=simpleshop&utm_medium=form&utm_campaign=27116" target="_blank" class="underline hover:text-gray-700">
+    <a
+      href="https://www.simpleshop.cz/?utm_source=simpleshop&utm_medium=form&utm_campaign=27116"
+      target="_blank"
+      class="underline hover:text-gray-700"
+    >
       SimpleShop.cz
     </a>.
   </div>
@@ -94,7 +110,7 @@
       (i[r].q = i[r].q || []).push(arguments)
     }, i[r].l = 1 * new Date();
     a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
+    m = s.getElementsByTagName(o)[0];
     a.async = 1;
     a.src = g;
     m.parentNode.insertBefore(a, m)
@@ -102,6 +118,7 @@
   sss("createForm", "4zR67");
 </script>
 <!-- www.SimpleShop.cz form#120968 end -->
+
     </section>
     </div>
     <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
