--- a/index.html
+++ b/index.html
@@ -79,18 +79,10 @@
       <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
     </section>
   <!-- www.SimpleShop.cz form#120968 start -->
-<div
+<section
   id="simpleshop"
+  class="simpleshop bg-white p-6 rounded-2xl shadow-lg mb-8"
   data-SimpleShopForm="4zR67"
-  class="simpleshop
-         bg-[#f9fafc]
-         p-6
-         rounded-2xl
-         shadow-lg
-         mb-8
-         max-w-3xl
-         mx-auto
-         my-8"
 >
   <div class="text-sm text-gray-500 mt-4 text-center">
     Prodejní formulář je vytvořen v systému
@@ -102,7 +94,7 @@
       SimpleShop.cz
     </a>.
   </div>
-</div>
+</section>
 <script>
   (function(i, s, o, g, r, a, m) {
     i[r] = i[r] || function() {
