--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
 <body class="bg-gray-50 text-gray-800 font-inter">
   <div class="max-w-5xl mx-auto px-4">
   <header id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
-  <h1 class="text-3xl font-extrabold mb-2">Jak vydělat na internetu v roce 2025</h1>
-  <p class="mb-4">3 mikroprojekty, které mi v 2024 vydělaly 27 000 Kč měsíčně.</p>
+  <h1 class="text-3xl font-extrabold mb-2">Získejte e-book „Jak vydělat na internetu v roce 2025“ se 13 konkrétními online metodami</h1>
+  <p class="mb-4">○ Speciální zaváděcí cena: 99 Kč místo 299 Kč – pouze pro prvních 100 nákupů</p>
+    <p class="mb-4">○ 14denní garance vrácení peněz</p>
+    <p class="mb-4">○ Bonus: exkluzivní odkaz na přednastaveného ChatGPT agenta, který vám pomůže spustit váš první mikroprojekt</p>
   <a href="https://example.com/platba"
      aria-label="Koupit e-book"
      onclick="gtag('event','click',{'event_category':'cta'});"
      class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">
-    Koupit e-book
+    Chci e-book za 99 Kč
   </a>
   <p class="mt-2">
     <a href="#faq" class="underline text-white focus:outline-none focus:ring-4 focus:ring-yellow-300">
@@ -57,7 +59,7 @@
     <section id="why" class="mb-8">
       <h2 class="text-2xl font-bold mb-4">Proč právě tento e‑book</h2>
       <ul class="list-none space-y-2">
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Ověřené postupy, které mi přinesly přes 300 000 Kč za poslední rok.</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>13 ověřených online metod</b> - od freelancingu přes e-shop až po pasivní investic.</li>
         <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Reálné ukázky tří projektů s náklady pod 1 000 Kč.</li>
         <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Návody krok za krokem včetně checklistů.</li>
         <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Minimalistické nástroje zdarma nebo do 500 Kč.</li>
