--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="css/styles.css">
   <meta property="og:title" content="Jak vydělat na internetu v roce 2025 | E-book">
-  <meta property="og:description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.">
+  <meta property="og:description" content="Praktický návod, jak rozjet online projekty a vydělat na internetu.">
   <meta property="og:image" content="https://michal789-cmd.github.io/ebook/images/cover.png">
   <meta property="og:url" content="https://michal789-cmd.github.io/ebook/">
   <meta name="twitter:card" content="summary_large_image">
@@ -37,11 +37,19 @@
 </head>
 <body class="bg-gray-50 text-gray-800 font-inter">
   <div class="max-w-5xl mx-auto px-4">
-  <header id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
-  <h1 class="text-3xl font-extrabold mb-2">Získejte e-book „Jak vydělat na internetu v roce 2025“ se 13 konkrétními online metodami</h1>
-  <p class="mb-4">○ Speciální zaváděcí cena: 99 Kč místo 299 Kč – pouze pro prvních 100 nákupů</p>
-    <p class="mb-4">○ 14denní garance vrácení peněz</p>
-    <p class="mb-4">○ Bonus: exkluzivní odkaz na přednastaveného ChatGPT agenta, který vám pomůže spustit váš první mikroprojekt</p>
+<header id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
+  <h1 class="text-3xl font-extrabold mb-2">
+    Odhalte 13 prověřených způsobů, jak si přivydělat online
+  </h1>
+  <p class="text-lg mb-4">
+    Průvodce „Jak vydělat na internetu v roce 2025“
+  </p>
+  <p class="mb-2">
+    <strong>99 Kč</strong> místo 299 Kč – <strong>jen pro prvních 100</strong>
+  </p>
+  <p class="mb-4">
+    <strong>14denní garance vrácení peněz</strong> + <strong>bonusový ChatGPT agent zdarma</strong>
+  </p>
   <a href="https://example.com/platba"
      aria-label="Koupit e-book"
      onclick="gtag('event','click',{'event_category':'cta'});"
@@ -50,10 +58,11 @@
   </a>
   <p class="mt-2">
     <a href="#faq" class="underline text-white focus:outline-none focus:ring-4 focus:ring-yellow-300">
-      ↘ Přejít na FAQ
+      ↘ Přejít na FAQ
     </a>
   </p>
 </header>
+
     </div>
 <main class="max-w-4xl mx-auto px-4 py-8">
     <section id="why" class="mb-8">
