--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       <h2 class="text-2xl font-bold mb-4">Proč právě tento e‑book</h2>
       <ul class="list-none space-y-2">
         <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>13 ověřených online metod</b> - od freelancingu přes e-shop až po pasivní investic.</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Reálné ukázky tří projektů s náklady pod 1 000 Kč.</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Návody krok za krokem včetně checklistů.</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Minimalistické nástroje zdarma nebo do 500 Kč.</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span>Podpora e-mailem do 24 hodin.</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Exkluzivní přístup k přednastavenému ChatGPT agentovi</b>pro personalizované rady, nápady a šablony</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Bez rizika: 14denní garance vrácení peněz</b> - pokud nebudete spokojeni, vrátíme Vám peníze</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Praktické tipy</b> na české i zahraniční platformy (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet aj.)</li>
+        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Rychlá e-mailová podpora do 24 hodin</b> - kdykoli budete potřebovat pomoc</li>
       </ul>
     </section>
     <section id="learn" class="mb-8">
