--- a/index.html
+++ b/index.html
@@ -76,9 +76,16 @@
       </ul>
     </section>
     <section id="learn" class="mb-8">
-      <h2 class="text-2xl font-bold mb-4">Co se naučíte</h2>
-      <p>Jak vybrat správnou online strategii, jak nastavit proces získávání zákazníků a jak měřit výsledky, abyste do 90 dnů dosáhli příjmu 30 000 Kč.</p>
-    </section>
+  <h2 class="text-2xl font-bold mb-4">Co se naučíte</h2>
+  <ul class="list-disc list-inside space-y-2">
+    <li><strong>Přehled 13 ověřených metod</strong> online výdělku – od freelancingu až po investice, srozumitelně vysvětlených po principu, výhodách a úskalích.</li>
+    <li><strong>Potřebné vstupy</strong> pro každou metodu: jaké dovednosti, nástroje a rozpočet budete potřebovat.</li>
+    <li><strong>Kde a jak začít</strong> – seznam českých i zahraničních platforem (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet, Aukro aj.), včetně tipů na registraci a první kroky.</li>
+    <li><strong>Realistická očekávání</strong> – orientační časová a finanční investice, průměrné výnosy a nejčastější překážky.</li>
+    <li><strong>Bonusový ChatGPT agent</strong> – přednastavený chatbot, který vám pomůže generovat texty, nápady a personalizované rady pro vaše projekty.</li>
+  </ul>
+</section>
+
     <section class="product flex flex-col md:flex-row items-center bg-white p-6 rounded-2xl shadow-lg mb-8">
       <img src="images/cover.png" srcset="images/cover.png 1x, images/cover.png 2x" alt="Obálka e-booku Jak vydělat na internetu v roce 2025" class="w-48 md:w-72 rounded-2xl shadow">
       <div class="details md:ml-6 mt-4 md:mt-0">
