--- a/index.html
+++ b/index.html
@@ -77,14 +77,16 @@
     </section>
     <section id="learn" class="mb-8">
   <h2 class="text-2xl font-bold mb-4">Co se naučíte</h2>
-  <ul class="list-disc list-inside space-y-2">
-    <li><strong>Přehled 13 ověřených metod</strong> online výdělku – od freelancingu až po investice, srozumitelně vysvětlených po principu, výhodách a úskalích.</li>
-    <li><strong>Potřebné vstupy</strong> pro každou metodu: jaké dovednosti, nástroje a rozpočet budete potřebovat.</li>
-    <li><strong>Kde a jak začít</strong> – seznam českých i zahraničních platforem (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet, Aukro aj.), včetně tipů na registraci a první kroky.</li>
-    <li><strong>Realistická očekávání</strong> – orientační časová a finanční investice, průměrné výnosy a nejčastější překážky.</li>
-    <li><strong>Bonusový ChatGPT agent</strong> – přednastavený chatbot, který vám pomůže generovat texty, nápady a personalizované rady pro vaše projekty.</li>
-  </ul>
+  <p>
+    V e-booku <strong>„Jak vydělat na internetu v roce 2025“</strong> získáte komplexní 
+    přehled <strong>13 ověřených online metod</strong> – od freelancingu a prodeje digitálních produktů až po investování. 
+    Dozvíte se, <strong>jaké dovednosti, nástroje a rozpočet potřebujete</strong>, a 
+    <strong>kde se zaregistrovat</strong> (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet, Aukro aj.). 
+    Připravíme vás na <strong>realistická očekávání</strong> – kolik času a peněz investovat a jak čelit nejčastějším úskalím. 
+    Navíc získáte <strong>bonusového ChatGPT agenta</strong>, který vám pomůže generovat nápady, šablony a personalizované rady.
+  </p>
 </section>
+
 
     <section class="product flex flex-col md:flex-row items-center bg-white p-6 rounded-2xl shadow-lg mb-8">
       <img src="images/cover.png" srcset="images/cover.png 1x, images/cover.png 2x" alt="Obálka e-booku Jak vydělat na internetu v roce 2025" class="w-48 md:w-72 rounded-2xl shadow">
