--- a/index.html
+++ b/index.html
@@ -67,13 +67,23 @@
 <main class="max-w-4xl mx-auto px-4 py-8">
     <section id="why" class="mb-8">
       <h2 class="text-2xl font-bold mb-4">Proč právě tento e‑book</h2>
-      <ul class="list-none space-y-2">
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>13 ověřených online metod</b> - od freelancingu přes e-shop až po pasivní investic.</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Exkluzivní přístup k přednastavenému ChatGPT agentovi</b>pro personalizované rady, nápady a šablony</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Bez rizika: 14denní garance vrácení peněz</b> - pokud nebudete spokojeni, vrátíme Vám peníze</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Praktické tipy</b> na české i zahraniční platformy (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet aj.)</li>
-        <li class="flex items-start"><span class="text-yellow-500 mr-2">✔</span><b>Rychlá e-mailová podpora do 24 hodin</b> - kdykoli budete potřebovat pomoc</li>
-      </ul>
+    <ul class="space-y-2">
+  <li>
+    <span class="font-bold">13 ověřených online metod</span> – od freelancingu přes e-shop až po pasivní investice.
+  </li>
+  <li>
+    <span class="font-bold">Exkluzivní přístup k přednastavenému ChatGPT agentovi</span> – personalizované rady, nápady a šablony.
+  </li>
+  <li>
+    <span class="font-bold">Bez rizika: 14denní garance vrácení peněz</span> – pokud nebudete spokojeni, vrátíme vám peníze.
+  </li>
+  <li>
+    <span class="font-bold">Praktické tipy</span> – české i zahraniční platformy (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet aj.).
+  </li>
+  <li>
+    <span class="font-bold">Rychlá e-mailová podpora do 24 hodin</span> – kdykoli budete potřebovat pomoc.
+  </li>
+</ul>
     </section>
     <section id="learn" class="mb-8">
   <h2 class="text-2xl font-bold mb-4">Co se naučíte</h2>
