--- a/index.html
+++ b/index.html
@@ -68,22 +68,28 @@
     <section id="why" class="mb-8">
       <h2 class="text-2xl font-bold mb-4">Proč právě tento e‑book</h2>
     <ul class="space-y-2">
-  <li>
-    <span class="font-bold">13 ověřených online metod</span> – od freelancingu přes e-shop až po pasivní investice.
+  <li class="flex items-start">
+    <span class="text-yellow-400 mr-2">✓</span>
+    <span><strong>13 ověřených online metod</strong> – od freelancingu přes e-shop až po pasivní investice.</span>
   </li>
-  <li>
-    <span class="font-bold">Exkluzivní přístup k přednastavenému ChatGPT agentovi</span> – personalizované rady, nápady a šablony.
+  <li class="flex items-start">
+    <span class="text-yellow-400 mr-2">✓</span>
+    <span><strong>Exkluzivní přístup k přednastavenému ChatGPT agentovi</strong> – personalizované rady, nápady a šablony.</span>
   </li>
-  <li>
-    <span class="font-bold">Bez rizika: 14denní garance vrácení peněz</span> – pokud nebudete spokojeni, vrátíme vám peníze.
+  <li class="flex items-start">
+    <span class="text-yellow-400 mr-2">✓</span>
+    <span><strong>Bez rizika: 14denní garance vrácení peněz</strong> – pokud nebudete spokojeni, vrátíme vám peníze.</span>
   </li>
-  <li>
-    <span class="font-bold">Praktické tipy</span> – české i zahraniční platformy (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet aj.).
+  <li class="flex items-start">
+    <span class="text-yellow-400 mr-2">✓</span>
+    <span><strong>Praktické tipy</strong> – české i zahraniční platformy (NaVolneNoze.cz, Fiverr, Seduo.cz, Shoptet aj.).</span>
   </li>
-  <li>
-    <span class="font-bold">Rychlá e-mailová podpora do 24 hodin</span> – kdykoli budete potřebovat pomoc.
+  <li class="flex items-start">
+    <span class="text-yellow-400 mr-2">✓</span>
+    <span><strong>Rychlá e-mailová podpora do 24 hodin</strong> – kdykoli budete potřebovat pomoc.</span>
   </li>
 </ul>
+
     </section>
     <section id="learn" class="mb-8">
   <h2 class="text-2xl font-bold mb-4">Co se naučíte</h2>
