--- a/index.html
+++ b/index.html
@@ -148,13 +148,34 @@
 
   
     </div>
-    <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
-      <h2 class="text-2xl font-bold mb-4">FAQ</h2>
-      <div class="faq-item mb-4"><h3 class="font-semibold">Je e-book vhodný pro začátečníky?</h3><p>Ano, všechny postupy jsou vysvětleny jednoduše a srozumitelně.</p></div>
-      <div class="faq-item mb-4"><h3 class="font-semibold">Jak e-book obdržím?</h3><p>Ihned po zaplacení obdržíte odkaz ke stažení na e-mail.</p></div>
-      <div class="faq-item mb-4"><h3 class="font-semibold">Jak mohu požádat o vrácení peněz?</h3><p>Napište do 14 dnů od nákupu na <a href="mailto:podpora@example.com" class="text-blue-700 underline">podpora@example.com</a>. Peníze vracíme stejnou metodou platby.</p></div>
-      <div class="faq-item"><h3 class="font-semibold">Mohu e-book sdílet s ostatními?</h3><p>E-book je určen pouze pro vaše osobní potřeby.</p></div>
-    </section>
+  <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
+  <h2 class="text-2xl font-bold mb-4">FAQ</h2>
+  <div class="faq-item mb-4">
+    <h3 class="font-semibold">Pro koho je e-book určen?</h3>
+    <p>Pro každého, kdo chce začít vydělávat online – od úplných začátečníků (studenti, maminky na mateřské) až po freelancery či malé podnikatele. Všechny metody jsou vysvětlené srozumitelně a bez zbytečné teorie.</p>
+  </div>
+  <div class="faq-item mb-4">
+    <h3 class="font-semibold">Jak e-book obdržím?</h3>
+    <p>Po kliknutí na tlačítko „Chci e-book za 99 Kč“ budete přesměrováni do platební brány. Ihned po úspěšné platbě obdržíte e-mail s odkazem ke stažení PDF.</p>
+  </div>
+  <div class="faq-item mb-4">
+    <h3 class="font-semibold">Jak funguje sleva pro prvních 100 zákazníků?</h3>
+    <p>Prvních 100 nákupů zaplatí pouze 99 Kč (běžná cena 299 Kč). Po vyčerpání limitu se cena automaticky vrací na 299 Kč.</p>
+  </div>
+  <div class="faq-item mb-4">
+    <h3 class="font-semibold">Co je bonusový ChatGPT agent?</h3>
+    <p>Ke každému nákupu získáte odkaz na přednastaveného ChatGPT agenta, který vám pomůže generovat marketingové texty, nápady a šablony přímo pro zvolenou metodu.</p>
+  </div>
+  <div class="faq-item mb-4">
+    <h3 class="font-semibold">Jak uplatním 14denní garanci vrácení peněz?</h3>
+    <p>Stačí do 14 dnů od nákupu napsat na <a href="mailto:podpora@example.com" class="text-blue-700 underline">podpora@example.com</a>. Peníze vrátíme stejnou metodou platby, bez dalších otázek.</p>
+  </div>
+  <div class="faq-item">
+    <h3 class="font-semibold">Kdy a jak využiji e-mailovou podporu?</h3>
+    <p>Na všechny dotazy odpovídáme do 24 hodin na e-mail, který jste zadali při nákupu. Rádi pomůžeme s čímkoli, co se týká obsahu e-booku nebo bonusového agenta.</p>
+  </div>
+</section>
+
   </main>
   <footer class="text-center text-sm text-gray-500 py-4">
     <p>&copy; 2025 Jan Novák</p>
