--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   </div>
   <div class="faq-item mb-4">
     <h3 class="font-semibold">Jak e-book obdržím?</h3>
-    <p>Po kliknutí na tlačítko „Chci e-book za 99 Kč“ budete přesměrováni do platební brány. Ihned po úspěšné platbě obdržíte e-mail s odkazem ke stažení PDF.</p>
+    <p>Stačí vyplnit formulář výše a odeslat tlačítkem "Potvrďte nákup". Ihned po úspěšné platbě obdržíte odkaz ke stažení PDF.</p>
   </div>
   <div class="faq-item mb-4">
     <h3 class="font-semibold">Jak funguje sleva pro prvních 100 zákazníků?</h3>
@@ -164,11 +164,11 @@
   </div>
   <div class="faq-item mb-4">
     <h3 class="font-semibold">Co je bonusový ChatGPT agent?</h3>
-    <p>Ke každému nákupu získáte odkaz na přednastaveného ChatGPT agenta, který vám pomůže generovat marketingové texty, nápady a šablony přímo pro zvolenou metodu.</p>
+    <p>Ke každému nákupu získáte odkaz na přednastaveného ChatGPT agenta, který vám pomůže generovat marketingové texty, nápady nebo doplňkové informace k e-booku.</p>
   </div>
   <div class="faq-item mb-4">
     <h3 class="font-semibold">Jak uplatním 14denní garanci vrácení peněz?</h3>
-    <p>Stačí do 14 dnů od nákupu napsat na <a href="mailto:podpora@example.com" class="text-blue-700 underline">podpora@example.com</a>. Peníze vrátíme stejnou metodou platby, bez dalších otázek.</p>
+    <p>Stačí do 14 dnů od nákupu napsat na <a href="mailto:ebookjakvydelatpenize@gmail.com" class="text-blue-700 underline">ebookjakvydelatpenize@gmail.com</a> Vaše jméno, číslo objednávky, důvod nespokojenosti a číslo účtu na který vám vrátíme peníze.</p>
   </div>
   <div class="faq-item">
     <h3 class="font-semibold">Kdy a jak využiji e-mailovou podporu?</h3>
