--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <p class="mb-4">
     <strong>14denní garance vrácení peněz</strong> + <strong>bonusový ChatGPT agent zdarma</strong>
   </p>
-  <a href="https://example.com/platba"
+  <a href="#simpleshop"
      aria-label="Koupit e-book"
      onclick="gtag('event','click',{'event_category':'cta'});"
      class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">
@@ -107,7 +107,7 @@
     <section class="product flex flex-col md:flex-row items-center bg-white p-6 rounded-2xl shadow-lg mb-8">
       <img src="images/cover.png" srcset="images/cover.png 1x, images/cover.png 2x" alt="Obálka e-booku Jak vydělat na internetu v roce 2025" class="w-48 md:w-72 rounded-2xl shadow">
       <div class="details md:ml-6 mt-4 md:mt-0">
-        <a href="https://example.com/platba" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
+        <a href="#simpleshop" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
       </div>
     </section>
     <section id="author" class="author bg-white p-6 rounded-2xl shadow-lg mb-8">
@@ -178,7 +178,7 @@
 
   </main>
   <footer class="text-center text-sm text-gray-500 py-4">
-    <p>&copy; 2025 Jan Novák</p>
+    <p>&copy; 2025 KnowHowHub</p>
   </footer>
   <script src="https://cdn.kiprotect.com/klaro/v0.7/klaro.min.js"></script>
   <script src="js/cookie.js"></script>
