--- a/index.html
+++ b/index.html
@@ -110,10 +110,6 @@
         <a href="#simpleshop" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
       </div>
     </section>
-    <section id="author" class="author bg-white p-6 rounded-2xl shadow-lg mb-8">
-      <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
-      <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
-    </section>
   <!-- www.SimpleShop.cz form#120968 start -->
 <section
   id="simpleshop"
@@ -146,7 +142,10 @@
 </script>
 <!-- www.SimpleShop.cz form#120968 end -->
 
-  
+  <section id="author" class="author bg-white p-6 rounded-2xl shadow-lg mb-8">
+      <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
+      <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
+    </section>
     </div>
   <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
   <h2 class="text-2xl font-bold mb-4">FAQ</h2>
@@ -175,6 +174,7 @@
     <p>Na všechny dotazy odpovídáme do 24 hodin na e-mail, který jste zadali při nákupu. Rádi pomůžeme s čímkoli, co se týká obsahu e-booku nebo bonusového agenta.</p>
   </div>
 </section>
+  <a href="#simpleshop" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
 
   </main>
   <footer class="text-center text-sm text-gray-500 py-4">
